@@ -13,7 +13,10 @@ elif which[0] == "numpy":
         from maskedarray import *
         print "using maskedarray"
     else:
-        from numpy.core.ma import *
+        try:
+            from numpy.ma import *        # numpy 1.05 and later
+        except ImportError:
+            from numpy.core.ma import *   # earlier
         #print "using ma"
     def getmaskorNone(obj):
         _msk = getmask(obj)
