@@ -1,3 +1,7 @@
+2007-12-25 Changed masked array importing to work with the upcoming
+           numpy 1.05 (now the maskedarray branch) as well as with
+           earlier versions. - EF
+
 2007-12-16 rec2csv saves doubles without losing precision. Also, it
            does not close filehandles passed in open. - JDH,ADS
 
